--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 						<ul class="icons">
 
-							<li><a href="" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
+							<li><a href="www.linkedin.com/in/siradio-barry-34631422b" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
 							<li><a href="https://github.com/barry156" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -150,8 +150,8 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="www.linkedin.com/in/siradio-barry-34631422b" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/barry156" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
