--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 						<ul class="icons">
 
-							<li><a href="www.linkedin.com/in/siradio-barry-34631422b" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
+							<li><a href="https://www.linkedin.com/in/siradio-barry-34631422b" class="icon brands fa-linkedin"><span class="label">Linkedln</span></a></li>
 							<li><a href="https://github.com/barry156" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
