Add project E-commerce

--- a/index.html
+++ b/index.html
@@ -118,6 +118,28 @@
 										<li><a href="https://github.com/barry156/Quiz-result-transfer/" class="button">Checkt it out</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="#">project 5<br />
+										E-commerce Website mit Angular und C#</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/E-commerce.png" alt="" /></a>
+									<p>
+										Dieses Angular-Projekt dient dazu, Entwicklern, insbesondere Anfängern, beizubringen, wie Angular mit Backend-Systemen kommuniziert, die in C# entwickelt wurden. Es zeigt auch, wie Sie eine Warenkorb-Funktionalität implementieren und eine PayPal-Zahlungsumgebung in Ihr Angular-Projekt integrieren können.
+Funktionalitäten
+
+    Implementierung eines Warenkorbs: Dieses Projekt bietet eine vollständige Anleitung zur Implementierung eines Warenkorbs in einem Angular-E-Commerce-System. Sie lernen, wie Sie Produkte hinzufügen, entfernen und die Gesamtmenge berechnen können.
+
+    Integration von PayPal-Zahlungen: Neben dem Warenkorb lernen Sie auch, wie Sie PayPal als Zahlungsmethode in Ihrem Angular-Projekt einrichten können. Dies beinhaltet die Integration der PayPal-API und die Verarbeitung von Zahlungen über die Plattform.
+
+
+
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/barry156/E-Commerce-webseite-with-Angular-/" class="button">Checkt it out</a></li>
+									</ul>
+								</article>
 								
 							</section>
 
